src/tests/snapshots/tera__tests__parser__parser_errors@extends_in_body.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/extends_in_body.txt
---
 Syntax error --> [extends_in_body.txt:1:24]
  |
1 | {% if true %}{% extends "a" %}{% endif %}
  |                         ^---
  = `extends` cannot be nested in other tags.
        
